# MobileRobotNav2

./: .gitignore  build.sh  commands.txt  frames_2026-04-09_14.04.51.gv  frames_2026-04-09_18.13.43.gv  frames_2026-04-12_12.14.54.gv  frames_2026-04-15_13.28.06.gv  frames_2026-04-15_13.30.22.gv  frames_2026-04-15_16.31.48.gv  frames_2026-04-16_08.18.40.gv  frames_2026-04-16_13.24.13.gv  frames_2026-04-22_11.41.57.gv  frames_2026-04-27_16.17.09.gv
.devcontainer/: Dockerfile  devcontainer.json
src/car/: CMakeLists.txt  package.xml
src/car/config/: config.rviz  controller_params.yaml  ekf.yaml  localization_robot_controller.yaml  mapper_params_online_async.yaml  nav2_params.yaml  robot_controller copy.yaml  robot_controller.yaml  slam-config.rviz  world.sdf
src/car/config/map/: big_empty_map.yaml  map_save.pgm  map_save.yaml  map_serial.data
src/car/config/real/: controller_params.yaml  nav2_params.yaml  robot_controller.yaml
src/car/config/sim/: controller_params.yaml  nav2_params.yaml  nav2_params_temp.yaml  robot_controller.yaml
src/car/launch/: bringup_launch.py  launch_action_servers.py  obstacles.spawn.py  real.launch.py  real.localization.py  sim.launch.py  sim.localization.py  sim.slam.py  test_params.py
src/car/model/: gazebo.xacro  obstacles.sdf  real_robot.xacro  robot.xacro
src/car/model/localization-robot/: gazebo.xacro  robot.xacro
src/car/model/real-robot/: robot.xacro
src/car/model/slam-robot/: robot.xacro
src/car/src/: calibration_monitor.cpp  car_controller.cpp  gt_node.cpp  match_monitor.cpp  screen_monitor.cpp
src/car/src/controllers/: anus_action_server.cpp  anus_controller.cpp  oesophage_action_server.cpp  oesophage_controller.cpp  stomach_action_server.cpp  stomach_controller.cpp
src/custom_action_interfaces/: CMakeLists.txt  package.xml
src/custom_action_interfaces/action/: DropJengas.action  GrabJengas.action
src/ldlidar_stl_ros2/: CMakeLists.txt
src/ldlidar_stl_ros2/launch/: ld19.launch.py
src/micro_ros_hardware/: CMakeLists.txt  package.xml
src/micro_ros_hardware/include/micro_ros_hardware/: micro_ros_hardware_interface.hpp
src/micro_ros_hardware/src/: micro_ros_hardware_interface.cpp
src/robot_messages/: CMakeLists.txt
src/robot_msgs/: CMakeLists.txt
